end of Wednesday June 29 assignment

--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,15 @@ H1 {
 p {
   color: white
 }
+
+label {
+  color: white;
+}
+
+#submit {
+  color: white;
+}
+
+input {
+  background-color: white;
+}
